feat: Override catalog/product endpoint
